tests/diagnostics/catalog/snapshots/ir/IR0032.snap
error[IR0032]: IR_E_INVALID_DEREF
 --> tests/diagnostics/catalog/sources/ir/IR0032.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0032
  = help: keep IR validation diagnostics structured and catalog-backed
